# copier-uv-test

./: .copier-answers.yml  .envrc  CONTRIBUTING.md  LICENSE  README.md  duties.py  mkdocs.yml  notes.md  pyproject.toml
.github/ISSUE_TEMPLATE/: 1-bug.md  config.yml
config/: ruff.toml
docs/.overrides/partials/: comments.html
scripts/: gen_credits.py
src/copier_uv_test/: __init__.py  __main__.py  cli.py  debug.py
tests/: __init__.py  test_cli.py
